<resources>
    <string name="app_name">IndividualProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon">Icon</string>
    <string name="search">Search</string>
    <string name="no_new_words">You have no new words yet…</string>
    <string name="no_completed_words">You have no completed words yet…</string>
    <string name="add_new">Add New</string>
    <string name="title">Title</string>
    <string name="definition">Definition</string>
    <string name="synonyms">Synonyms</string>
    <string name="details">Details</string>
    <string name="title_hint">\'Apple…\'</string>
    <string name="definition_hint">\'A fruit…\'</string>
    <string name="synonyms_hint">\'Pomaceous fruit…\'</string>
    <string name="details_hint">\'The item that inspired the concept of gravity…\'</string>
    <string name="word_details">Word Details</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="header">%s Word?</string>
    <string name="tab_text">%s Words</string>
    <string name="body">This action cannot be undone!</string>
    <string name="sort_order">Sort Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="date_created">Date Created</string>
    <string name="add_edit_details">%s Details</string>
</resources>