<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.individualproject.ui.viewmodel.AddEditWordViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_purple"
        tools:context=".ui.fragment.AddEditWordFragment">

        <TextView
            android:id="@+id/tvAddEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:paddingHorizontal="10dp"
            android:background="@color/white"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/large_text_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/title_hint"
                android:padding="10dp"
                android:autofillHints="@string/title_hint"
                android:inputType="text"
                android:text="@={viewModel.title}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/definition"
                android:textSize="@dimen/large_text_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/definition_hint"
                android:padding="10dp"
                android:autofillHints="@string/definition_hint"
                android:inputType="text"
                android:text="@={viewModel.definition}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synonyms"
                android:textSize="@dimen/large_text_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/synonyms_hint"
                android:padding="10dp"
                android:autofillHints="@string/synonyms_hint"
                android:inputType="text"
                android:text="@={viewModel.synonyms}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textSize="@dimen/large_text_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/details_hint"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:padding="10dp"
                android:autofillHints="@string/details_hint"
                android:text="@={viewModel.details}"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbAddEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/purple"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="4dp"/>

        </LinearLayout>

    </LinearLayout>
</layout>