<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tvSortOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_order"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginVertical="10dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/mrbAsc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ascending"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:checked="true" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/mrbDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descending"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:checked="false" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvSortBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_order"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginVertical="10dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/mrbTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:checked="true" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/mrbDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_created"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:checked="false" />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="8dp"
                android:text="@string/confirm"
                android:backgroundTint="@color/blue"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>